# float_motor-servo

subt-duckiefloat/: .gitignore  Dockerfile  README.md  build_docker.sh  docker_join.sh  docker_run.sh  environment.sh
subt-duckiefloat/catkin_ws/src/communication/: README.md
subt-duckiefloat/catkin_ws/src/duckiefloat_control/launch/: joystick.launch  joystick_newframe.launch
subt-duckiefloat/catkin_ws/src/duckiefloat_control/src/: joy_mapper_node.py
subt-duckiefloat/catkin_ws/src/duckiefloat_msgs/: CMakeLists.txt  package.xml
subt-duckiefloat/catkin_ws/src/duckiefloat_msgs/msg/: MotorCmd.msg
subt-duckiefloat/catkin_ws/src/duckiefloat_msgs/srv/: EStop.srv
subt-duckiefloat/catkin_ws/src/motor_control/: CMakeLists.txt  package.xml
subt-duckiefloat/catkin_ws/src/motor_control/src/: control_node.py  control_node_newframe.py  motor_hat_driver.py
subt-duckiefloat/catkin_ws/src/motor_test/: CMakeLists.txt  package.xml
subt-duckiefloat/catkin_ws/src/motor_test/src/: motor_test.py
subt-duckiefloat/catkin_ws/src/not_in_use/control/src/: pure_pursuit_point.py  subt_pid.py
subt-duckiefloat/catkin_ws/src/not_in_use/navigation/lane_following/: CMakeLists.txt
subt-duckiefloat/catkin_ws/src/not_in_use/navigation/lane_following/config/: velodyne_to_grid.yaml
subt-duckiefloat/catkin_ws/src/not_in_use/navigation/lane_following/include/: astar.hpp
subt-duckiefloat/catkin_ws/src/not_in_use/navigation/lane_following/launch/: astar_planning.launch  rgbd_lane_following.launch  velodyne_to_grid.launch
subt-duckiefloat/catkin_ws/src/not_in_use/navigation/lane_following/src/: helper.hpp  lidar_detection.cpp  path_planning.py  pursuit_target.hpp  pursuit_target_node.cpp  rgbd_detection.cpp  rgbd_lane_following.py  sim_ground.cpp  subt_lane_following.py  subt_pid.py  velodyne_to_grid.cpp  wall_following.hpp  wall_following_node.cpp
subt-duckiefloat/catkin_ws/src/not_in_use/navigation/lane_following/srv/: target_pose.srv
subt-duckiefloat/catkin_ws/src/not_in_use/navigation/path_planning/: CMakeLists.txt
subt-duckiefloat/catkin_ws/src/not_in_use/navigation/path_planning/src/: custom_a_star.cpp  custom_a_star.h
subt-duckiefloat/catkin_ws/src/not_in_use/sensors/sensor/: CMakeLists.txt  package.xml
subt-duckiefloat/catkin_ws/src/not_in_use/sensors/sensor/launch/: sensor.launch
subt-duckiefloat/catkin_ws/src/not_in_use/sensors/sensor/src/: infrared_pub.py  voltage2distance.cpp
subt-duckiefloat/catkin_ws/src/not_in_use/spaceship_control/: CMakeLists.txt  package.xml
subt-duckiefloat/catkin_ws/src/not_in_use/spaceship_control/config/inverse_kinematics_node/: default.yaml
subt-duckiefloat/catkin_ws/src/not_in_use/spaceship_control/launch/: inverse_kinematics_node.launch  joystick.launch  joystick2.launch  joystick3.launch  joystick4.launch  motors_driver_node2.launch  motors_driver_node3.launch
subt-duckiefloat/catkin_ws/src/not_in_use/spaceship_control/src/: autonomous_control.py  dagu_wheels_driver.py  height_control.py  inverse_kinematics_node.py  motor_driver_node.py  motors_driver_node.py  motors_driver_node2.py  motors_driver_node3.py  testing.py
subt-duckiefloat/catkin_ws/src/not_in_use/spaceship_control/src/temp/: motors_driver_node3.py~
subt-duckiefloat/catkin_ws/src/not_in_use/state_estimators/: CMakeLists.txt  package.xml
subt-duckiefloat/catkin_ws/src/not_in_use/state_estimators/launch/: state_estimator.launch
subt-duckiefloat/catkin_ws/src/not_in_use/state_estimators/src/: state_estimator_ukf_12d.py  state_estimator_ukf_7d.py
subt-duckiefloat/catkin_ws/src/rpi_gpio_estop/: CMakeLists.txt  package.xml
subt-duckiefloat/catkin_ws/src/rpi_gpio_estop/launch/: rpi_gpio_estop.launch
subt-duckiefloat/catkin_ws/src/rpi_gpio_estop/src/: estop_node.py
subt-duckiefloat/catkin_ws/src/sensors/: README.md
subt-duckiefloat/catkin_ws/src/sensors/ir_height/src/: height_node.py
subt-duckiefloat/catkin_ws/src/subt_msgs/: CMakeLists.txt
subt-duckiefloat/catkin_ws/src/subt_msgs/msg/: ArtifactPose.msg  ArtifactPoseArray.msg  SubTInfo.msg
subt-duckiefloat/catkin_ws/src/xbee_communication/: CMakeLists.txt  package.xml
subt-duckiefloat/catkin_ws/src/xbee_communication/misc/: xbee_operation.py
subt-duckiefloat/catkin_ws/src/xbee_communication/src/: estop_monitor.py  xbee_decoder.py  xbee_encoder.py
subt-duckiefloat/first_setup/: dependencies.sh  requirements.txt  setup_startup.sh
