<?xml version="1.0"?>
<package format="2">
  <name>rpi_gpio_estop</name>
  <version>0.0.0</version>
  <description>The rpi_gpio_estop package</description>

  <maintainer email="bensonpuppy1997@gmail.com">biomtion</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>duckiefloat_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>duckiefloat_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>duckiefloat_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
